fix scroll overflow issue

--- a/src/styles/sass/app-dashboard.scss
+++ b/src/styles/sass/app-dashboard.scss
@@ -44,11 +44,7 @@
 }
 
 .dashboard-container {
-  padding: 10px;
-
-  h2 {
-    color: #FFFFFF;
-  }
+  padding-bottom: 100px;
 }
 
 
